Добавил дизайна для crud представлений контроллеров

--- a/InspectorJournal/Views/Inspections/Delete.cshtml
+++ b/InspectorJournal/Views/Inspections/Delete.cshtml
@@ -5,64 +5,77 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Удалить</h2>
+<div class="container mt-5">
+    <h2 class="mb-4 text-center text-danger">Удалить</h2>
+    <h4 class="mb-4 text-center">Вы уверены, что хотите удалить эту запись?</h4>
 
-<h3>Вы уверены,что хотите удалить эту запись?</h3>
-<div>
-    <h4>Проверка</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Inspector.FullName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Inspector.FullName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Enterprise.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Enterprise.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ViolationType.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ViolationType.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ResponsiblePerson)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ResponsiblePerson)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.InspectionDate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.InspectionDate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ProtocolNumber)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ProtocolNumber)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.PenaltyAmount)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.PenaltyAmount)
-        </dd>
-    </dl>
+<div class="card shadow-lg">
+    <div class="card-body">
+        <h5 class="text-secondary">Информация о проверках</h5>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Inspector.FullName)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Inspector.FullName)
+            </dd>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="InspectionId" />
-        <input type="hidden" name="sortOrder" value="@ViewData["SortOrder"]" />
-        <input type="hidden" name="PenaltyAmount" value="@ViewData["PenaltyAmount"]" />
-        <input type="submit" value="Удалить" class="btn btn-danger" /> |
-        <a asp-action="Index" asp-route-sortOrder="@ViewData["SortOrder"]" asp-route-PenaltyAmount="@ViewData["PenaltyAmount"]">
-            Вернуться к списку
-        </a>
-    </form>
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Enterprise.Name)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Enterprise.Name)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.ViolationType.Name)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.ViolationType.Name)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.ResponsiblePerson)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.ResponsiblePerson)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.InspectionDate)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.InspectionDate)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.ProtocolNumber)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.ProtocolNumber)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.PenaltyAmount)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.PenaltyAmount)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="InspectionId" />
+            <div class="text-center">
+                <button type="submit" class="btn btn-danger btn-lg">
+                    <i class="bi bi-trash"></i> Удалить
+                </button>
+                <span class="mx-2">|</span>
+                <a asp-action="Index" class="btn btn-outline-primary">
+                    <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+                </a>
+            </div>
+        </form>
+    </div>
+</div>
 </div>
