--- a/InspectorJournal/Views/Enterprises/Create.cshtml
+++ b/InspectorJournal/Views/Enterprises/Create.cshtml
@@ -4,50 +4,63 @@
     ViewData["Title"] = "Создать";
 }
 
-<h1>Создать</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
 
-<h4>Предприятие</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+<h4 class="text-center">Создание нового предприятия</h4>
+<hr class="my-4" />
+
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <form asp-action="Create" class="bg-light p-4 rounded shadow-sm">
+            <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+
+            <div class="form-group mb-3">
+                <label asp-for="Name" class="control-label">Название предприятия</label>
+                <input asp-for="Name" class="form-control" placeholder="Введите название предприятия" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="OwnershipType" class="control-label"></label>
-                <input asp-for="OwnershipType" class="form-control" />
+
+            <div class="form-group mb-3">
+                <label asp-for="OwnershipType" class="control-label">Тип собственности</label>
+                <input asp-for="OwnershipType" class="form-control" placeholder="Введите тип собственности" />
                 <span asp-validation-for="OwnershipType" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
+
+            <div class="form-group mb-3">
+                <label asp-for="Address" class="control-label">Адрес</label>
+                <input asp-for="Address" class="form-control" placeholder="Введите адрес" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DirectorName" class="control-label"></label>
-                <input asp-for="DirectorName" class="form-control" />
+
+            <div class="form-group mb-3">
+                <label asp-for="DirectorName" class="control-label">Имя директора</label>
+                <input asp-for="DirectorName" class="form-control" placeholder="Введите имя директора" />
                 <span asp-validation-for="DirectorName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DirectorPhone" class="control-label"></label>
-                <input asp-for="DirectorPhone" class="form-control" />
+
+            <div class="form-group mb-3">
+                <label asp-for="DirectorPhone" class="control-label">Телефон директора</label>
+                <input asp-for="DirectorPhone" class="form-control" placeholder="Введите телефон директора" />
                 <span asp-validation-for="DirectorPhone" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="form-group text-center">
+                <button type="submit" class="btn btn-success btn-block">
+                    <i class="bi bi-check-circle"></i> Создать
+                </button>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Вернуться к списку</a>
+<div class="mt-3 text-center">
+    <a asp-action="Index" class="btn btn-outline-primary">
+        <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+    </a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
