--- a/InspectorJournal/Views/Enterprises/Delete.cshtml
+++ b/InspectorJournal/Views/Enterprises/Delete.cshtml
@@ -4,48 +4,70 @@
     ViewData["Title"] = "Удалить";
 }
 
-<h1>Удалить</h1>
+<div class="container mt-5">
+<h2 class="mb-4 text-center text-danger">Удалить</h2>
+<h4 class="mb-4 text-center">Вы уверены, что хотите удалить эту запись?</h4>
 
-<h3>Вы уверены,что хотите удалить эту запись?</h3>
-<div>
-    <h4>Предприятие</h4>
+<div class="card shadow-lg">
+<div class="card-body">
+    <h5 class="text-secondary">Информация о предприятии</h5>
     <hr />
+
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.OwnershipType)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.OwnershipType)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.Address)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.Address)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.DirectorName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.DirectorName)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.DirectorPhone)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.DirectorPhone)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="EnterpriseId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Вернуться к списку</a>
+        <div class="text-center">
+            <button type="submit" class="btn btn-danger btn-lg">
+                <i class="bi bi-trash"></i> Удалить
+            </button>
+            <span class="mx-2">|</span>
+            <a asp-action="Index" class="btn btn-outline-primary">
+                <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+            </a>
+        </div>
     </form>
+    </div>
 </div>
+    </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
