--- a/InspectorJournal/Views/Enterprises/Details.cshtml
+++ b/InspectorJournal/Views/Enterprises/Details.cshtml
@@ -4,45 +4,58 @@
     ViewData["Title"] = "Детали";
 }
 
-<h1>Детали</h1>
+<div class="container mt-4">
+<h2 class="mb-4 text-center">Детали </h2>
 
-<div>
-    <h4>Предприятие</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OwnershipType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OwnershipType)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DirectorName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DirectorName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DirectorPhone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DirectorPhone)
-        </dd>
-    </dl>
+<div class="card shadow-sm">
+    <div class="card-body">
+        <h4 class="mb-4">Информация о предприятиях</h4>
+
+        <dl class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.OwnershipType)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.OwnershipType)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Address)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Address)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.DirectorName)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.DirectorName)
+            </dd>
+
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.DirectorPhone)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.DirectorPhone)
+            </dd>
+        </dl>
+        <div class="text-center mt-4">
+            <a asp-action="Edit" asp-route-id="@Model.EnterpriseId" class="btn btn-primary">
+                <i class="bi bi-pencil"></i> Редактировать
+            </a>
+            <span class="mx-2">|</span>
+            <a asp-action="Index" class="btn btn-outline-primary">
+                <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+            </a>
+        </div>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.EnterpriseId">Edit</a> |
-    <a asp-action="Index">Вернуться к списку</a>
 </div>
