--- a/InspectorJournal/Views/Inspectors/Details.cshtml
+++ b/InspectorJournal/Views/Inspectors/Details.cshtml
@@ -1,30 +1,40 @@
 ﻿@model InspectorJournal.DataLayer.Models.Inspector
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Детали";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<div class="container mt-4">
+    <h2 class="mb-4 text-center">Детали </h2>
 
-<div>
-    <h4>Inspector</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Department)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Department)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.InspectorId">Edit</a> |
-    <a asp-action="Index">Вернуться к списку</a>
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <h4 class="mb-4">Информация об инспекторе</h4>
+            <dl class="row">
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.FullName)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.FullName)
+                </dd>
+
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Department)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Department)
+                </dd>
+            </dl>
+            <div class="text-center mt-4">
+                <a asp-action="Edit" asp-route-id="@Model.InspectorId" class="btn btn-primary">
+                    <i class="bi bi-pencil"></i> Редактировать
+                </a>
+                <span class="mx-2">|</span>
+                <a asp-action="Index" class="btn btn-outline-primary">
+                    <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
