--- a/InspectorJournal/Views/ViolationTypes/Delete.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Delete.cshtml
@@ -2,38 +2,53 @@
 
 @{
     ViewData["Title"] = "Удалить";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Удалить</h1>
+<div class="container mt-5">
+    <h2 class="mb-4 text-center text-danger">Удалить тип нарушения</h2>
+    <h4 class="mb-4 text-center">Вы уверены, что хотите удалить эту запись?</h4>
 
-<h3>Вы уверены,что хотите удалить эту запись?</h3>
-<div>
-    <h4>ViolationType</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PenaltyAmount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PenaltyAmount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CorrectionPeriodDays)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CorrectionPeriodDays)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ViolationTypeId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Вернуться к списку</a>
-    </form>
+    <div class="card shadow-lg">
+        <div class="card-body">
+            <h5 class="text-secondary">Информация о типе нарушения</h5>
+            <hr />
+
+            <dl class="row">
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.PenaltyAmount)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.PenaltyAmount)
+                </dd>
+
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.CorrectionPeriodDays)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.CorrectionPeriodDays)
+                </dd>
+            </dl>
+
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="ViolationTypeId" />
+                <div class="text-center">
+                    <button type="submit" class="btn btn-danger btn-lg">
+                        <i class="bi bi-trash"></i> Удалить
+                    </button>
+                    <span class="mx-2">|</span>
+                    <a asp-action="Index" class="btn btn-outline-primary">
+                        <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+                    </a>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
