--- a/InspectorJournal/Views/ViolationTypes/Details.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Details.cshtml
@@ -2,35 +2,48 @@
 
 @{
     ViewData["Title"] = "Детали";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Детали</h1>
+<div class="container mt-4">
+    <h2 class="mb-4 text-center">Детали </h2>
 
-<div>
-    <h4>ViolationType</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PenaltyAmount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PenaltyAmount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CorrectionPeriodDays)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CorrectionPeriodDays)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ViolationTypeId">Edit</a> |
-    <a asp-action="Index">Вернуться к списку</a>
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <h4 class="mb-4">Информация о типе нарушения</h4>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.PenaltyAmount)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.PenaltyAmount)
+                </dd>
+
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.CorrectionPeriodDays)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.CorrectionPeriodDays)
+                </dd>
+            </dl>
+
+            <div class="text-center mt-4">
+                <a asp-action="Edit" asp-route-id="@Model.ViolationTypeId" class="btn btn-primary">
+                    <i class="bi bi-pencil"></i> Редактировать
+                </a>
+                <span class="mx-2">|</span>
+                <a asp-action="Index" class="btn btn-outline-primary">
+                    <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
