--- a/InspectorJournal/Views/Shared/_Layout.cshtml
+++ b/InspectorJournal/Views/Shared/_Layout.cshtml
@@ -76,6 +76,9 @@
     <!-- Подключение скриптов для Development -->
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
+
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
