--- a/InspectorJournal/Views/Users/Index.cshtml
+++ b/InspectorJournal/Views/Users/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Пользователи</h2>
-<a class="btn btn-primary" asp-action="Create" asp-controller="Users">Добавить</a>
+<a class="btn btn-success" asp-action="Create" asp-controller="Users">Добавить</a>
 
 <table class="table">
     <tr>
