--- a/InspectorJournal/Views/ViolationTypes/Index.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Index.cshtml
@@ -6,6 +6,9 @@
     string ViolationTypeName = Model.Name ?? "";
 }
 
+<div class="container mt-4">
+    <!-- Заголовок -->
+    <h2 class="mb-4 text-center">Список типов нарушений</h2>
 <!-- Блок кнопок -->
 <div class="d-flex mb-3 justify-content-between align-items-center">
     @if (user.IsInRole("Admin"))
