--- a/InspectorJournal/wwwroot/css/site.css
+++ b/InspectorJournal/wwwroot/css/site.css
@@ -231,3 +231,25 @@
         font-size: 0.9rem;
     }
 }
+/* Ёффект плавного по€влени€ */
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+}
+
+/* Ёффект плавного исчезновени€ */
+.fade-out {
+    animation: fadeOut 1s forwards;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    to {
+        opacity: 0;
+    }
+}
